--- a/FE630 - Homework/FE630 - Homework #2/fe630-hw2-md/fe630-hw2.ipynb
+++ b/FE630 - Homework/FE630 - Homework #2/fe630-hw2-md/fe630-hw2.ipynb
@@ -78,6 +78,64 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Analytical Solution to the Optimization Problem\n",
+    "\n",
+    "##### Problem Formulation\n",
+    "\n",
+    "We aim to maximize the following objective function:\n",
+    "\n",
+    "$$\n",
+    "\\begin{cases}\n",
+    "\\underset{x_1, x_2}{\\max} & 5 - x_1^2 - x_1x_2 - 3x_2^2 \\tag{3}\n",
+    "\\\\\n",
+    "\\text{s.t.} & x_1, x_2 \\geq 0\n",
+    "\\\\\n",
+    "& x_1 x_2 \\geq 2\n",
+    "\\end{cases}\n",
+    "$$\n",
+    "\n",
+    "We denote the solution (the ***optimal solution***) by $\\omega^*(\\sigma_T)$ where $\\sigma_T$ represents the parameters under consideration, and the ***optimal value*** of the problem by $R_p(\\omega_1^*(\\sigma_T), \\omega_2^*(\\sigma_T))$ which is simplified to $R_p(\\sigma_T)$.\n",
+    "\n",
+    "##### Lagrangian Formulation\n",
+    "\n",
+    "Construct the Lagrangian to incorporate the constraints with the Lagrange multiplier $\\lambda$:\n",
+    "\n",
+    "$$\n",
+    "\\mathcal{L}(x_1, x_2, \\lambda) = 5 - x_1^2 - x_1x_2 - 3x_2^2 + \\lambda (x_1 x_2 - 2)\n",
+    "$$\n",
+    "\n",
+    "##### Conditions for Stationarity\n",
+    "\n",
+    "To find the extremum, we calculate the partial derivatives of $\\mathcal{L}$:\n",
+    "\n",
+    "$$\n",
+    "\\frac{\\partial \\mathcal{L}}{\\partial x_1} = -2x_1 - x_2 + \\lambda x_2 = 0 \\tag{1}\n",
+    "$$\n",
+    "$$\n",
+    "\\frac{\\partial \\mathcal{L}}{\\partial x_2} = -x_1 - 6x_2 + \\lambda x_1 = 0 \\tag{2}\n",
+    "$$\n",
+    "\n",
+    "##### Solving the Equations\n",
+    "\n",
+    "Equating and solving the derived equations for $x_1$ and $x_2$, and incorporating the constraints, will give us $\\omega^*(\\sigma_T) = (\\omega_1^*(\\sigma_T), \\omega_2^*(\\sigma_T))$. This involves solving:\n",
+    "\n",
+    "$$\n",
+    "2x_1^2 - 5x_1x_2 - x_2^2 = 0 \\tag{5}\n",
+    "$$\n",
+    "\n",
+    "##### Optimal Solution and Value\n",
+    "\n",
+    "Upon solving the equations and checking the feasibility with respect to the constraints, we can find the values of $\\omega_1^*(\\sigma_T)$ and $\\omega_2^*(\\sigma_T)$. Substituting these values into the original objective function gives us $R_p(\\sigma_T)$, the maximum value of the function:\n",
+    "\n",
+    "$$\n",
+    "R_p(\\sigma_T) = 5 - (\\omega_1^*(\\sigma_T))^2 - \\omega_1^*(\\sigma_T) \\omega_2^*(\\sigma_T) - 3(\\omega_2^*(\\sigma_T))^2\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### 1.1 Lagrangian Solution"
    ]
   },
@@ -454,6 +512,120 @@
     "$$\n",
     "\n",
     "and use an optimizer to verify your answer."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Optimal values: [1.86120971 1.07456993]\n",
+      "Maximum value of the function: -3.928203232982734\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from scipy.optimize import minimize\n",
+    "\n",
+    "# Objective function\n",
+    "def objective(x):\n",
+    "    x1, x2 = x\n",
+    "    return -(5 - x1**2 - x1*x2 - 3*x2**2)  # Negative because we are maximizing\n",
+    "\n",
+    "# Constraint functions\n",
+    "def constraint1(x):\n",
+    "    return x[0] * x[1] - 2\n",
+    "\n",
+    "# Initial guesses\n",
+    "x0 = [1, 2]\n",
+    "\n",
+    "# Define constraints and bounds\n",
+    "cons = [{'type': 'ineq', 'fun': constraint1}]\n",
+    "bnds = [(0, None), (0, None)]\n",
+    "\n",
+    "# Use 'SLSQP' method for solving the optimization problem\n",
+    "sol = minimize(objective, x0, method='SLSQP', bounds=bnds, constraints=cons)\n",
+    "\n",
+    "print('Optimal values:', sol.x)\n",
+    "print('Maximum value of the function:', -sol.fun)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Solutions from sympy:\n",
+      "{x1: x2*(5 - sqrt(33))/4}\n",
+      "{x1: x2*(5 + sqrt(33))/4}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sympy as sp\n",
+    "\n",
+    "# Define the symbols\n",
+    "x1, x2 = sp.symbols('x1 x2', real=True, nonnegative=True)\n",
+    "\n",
+    "# Equation derived from equating the lambda expressions\n",
+    "equation = 2*x1**2 - 5*x1*x2 - x2**2\n",
+    "\n",
+    "# Solve the equation\n",
+    "solution = sp.solve(equation, (x1, x2), dict=True)\n",
+    "print(\"Solutions from sympy:\")\n",
+    "for sol in solution:\n",
+    "    print(sol)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Optimization Results from scipy.optimize:\n",
+      "Optimal values: [1.86120972 1.07456993]\n",
+      "Maximum value of the function: -3.9282032329598344\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from scipy.optimize import minimize\n",
+    "\n",
+    "# Objective function (negative because we are using a minimizer)\n",
+    "def objective(x):\n",
+    "    return -(5 - x[0]**2 - x[0]*x[1] - 3*x[1]**2)\n",
+    "\n",
+    "# Constraint functions\n",
+    "constraints = [\n",
+    "    {'type': 'ineq', 'fun': lambda x: x[0] * x[1] - 2},  # x1 * x2 >= 2\n",
+    "    {'type': 'ineq', 'fun': lambda x: x[0]},              # x1 >= 0\n",
+    "    {'type': 'ineq', 'fun': lambda x: x[1]}               # x2 >= 0\n",
+    "]\n",
+    "\n",
+    "# Initial guess\n",
+    "x0 = [1, 2]\n",
+    "\n",
+    "# Use 'SLSQP' method for solving the optimization problem\n",
+    "result = minimize(objective, x0, method='SLSQP', constraints=constraints)\n",
+    "\n",
+    "print(\"\\nOptimization Results from scipy.optimize:\")\n",
+    "print(\"Optimal values:\", result.x)\n",
+    "print(\"Maximum value of the function:\", -result.fun)"
    ]
   }
  ],
