--- a/FE630 - Homework/FE630 - Homework #2/fe630-hw2-md/fe630-hw2.ipynb
+++ b/FE630 - Homework/FE630 - Homework #2/fe630-hw2-md/fe630-hw2.ipynb
@@ -78,7 +78,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Analytical Solution to the Optimization Problem\n",
+    "#### 1.1 Analytical Solution to the Optimization Problem\n",
     "\n",
     "##### Problem Formulation\n",
     "\n",
@@ -130,167 +130,6 @@
     "$$\n",
     "R_p(\\sigma_T) = 5 - (\\omega_1^*(\\sigma_T))^2 - \\omega_1^*(\\sigma_T) \\omega_2^*(\\sigma_T) - 3(\\omega_2^*(\\sigma_T))^2\n",
     "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 1.1 Lagrangian Solution"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### Problem Formulation\n",
-    "\n",
-    "The given optimization problem is:\n",
-    "\n",
-    "$$\n",
-    "\\begin{cases}\n",
-    "\\underset{x_1, x_2}{\\max} & 5 - x_1^2 - x_1x_2 - 3x_2^2 \\tag{2}\n",
-    "\\\\\n",
-    "\\text{s.t.} & x_1, x_2 \\geq 0\n",
-    "\\\\\n",
-    "& x_1 x_2 \\geq 2\n",
-    "\\end{cases}\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### Lagrangian Formulation\n",
-    "\n",
-    "The Lagrangian $\\mathcal{L}$ for this problem includes the objective function and the constraints incorporated through Lagrange multipliers:\n",
-    "\n",
-    "$$\n",
-    "\\mathcal{L}(x_1, x_2, \\lambda_1, \\lambda_2, \\lambda_3) = 5 - x_1^2 - x_1x_2 - 3x_2^2 + \\lambda_1 x_1 + \\lambda_2 x_2 + \\lambda_3 (x_1 x_2 - 2) \\tag{3}\n",
-    "$$\n",
-    "\n",
-    "Here, $\\lambda_1$, $\\lambda_2$, and $\\lambda_3$ are the Lagrange multipliers."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### Lagrangian Partial Derivatives\n",
-    "\n",
-    "To find the stationary points, we take the partial derivatives of $\\mathcal{L}$ and set them to zero:\n",
-    "\n",
-    "$$\n",
-    "\\frac{\\partial \\mathcal{L}}{\\partial x_1} = -2x_1 - x_2 + \\lambda_1 + \\lambda_3 x_2 = 0 \\tag{4}\n",
-    "$$\n",
-    "$$\n",
-    "\\frac{\\partial \\mathcal{L}}{\\partial x_2} = -x_1 - 6x_2 + \\lambda_2 + \\lambda_3 x_1 = 0 \\tag{5}\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### Complementary Slackness\n",
-    "\n",
-    "KKT conditions also include complementary slackness:\n",
-    "\n",
-    "$$\n",
-    "\\lambda_1 x_1 = 0, \\quad \\lambda_2 x_2 = 0, \\quad \\lambda_3 (x_1 x_2 - 2) = 0 \\tag{6}\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### Solve the System of Equations\n",
-    "\n",
-    "We consider different cases based on the KKT conditions:\n",
-    "\n",
-    "1. **Case 1: Interior Solution**\n",
-    "   - Assume $\\lambda_1 = \\lambda_2 = \\lambda_3 = 0$.\n",
-    "   - Solve equations (4) and (5) directly.\n",
-    "2. **Case 2: Boundary Solution**\n",
-    "   - Assume $x_1 > 0, x_2 > 0$, and $x_1 x_2 = 2$.\n",
-    "   - Substitute $x_1 = \\frac{2}{x_2}$ into the equations and solve."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### Analytical Solution\n",
-    "\n",
-    "**Case 1**: Assume $\\lambda_1 = \\lambda_2 = \\lambda_3 = 0$.\n",
-    "\n",
-    "Plugging in $\\lambda_1 = \\lambda_2 = \\lambda_3 = 0$ simplifies equations (4) and (5):\n",
-    "\n",
-    "$$\n",
-    "-2x_1 - x_2 = 0 \\implies x_2 = -2x_1 \\quad \\text{(not possible since $x_2 \\geq 0$)} \\tag{7}\n",
-    "$$\n",
-    "\n",
-    "**Case 2**: Boundary Solution with $x_1 x_2 = 2$\n",
-    "\n",
-    "Substitute $x_1 = \\frac{2}{x_2}$ into equations (4) and (5) and solve:\n",
-    "\n",
-    "$$\n",
-    "-2\\left(\\frac{2}{x_2}\\right) - x_2 + \\lambda_3 x_2 = 0 \\quad \\text{and} \\quad -\\frac{2}{x_2} - 6x_2 + \\lambda_3 \\frac{2}{x_2} = 0 \\tag{8}\n",
-    "$$\n",
-    "\n",
-    "Solving these equations:\n",
-    "\n",
-    "1. From equation (4): $\\lambda_3 x_2 = 4/x_2 + x_2$\n",
-    "2. Substitute $\\lambda_3 x_2$ from equation (4) into equation (5), and solve for $x_2$. This could yield $x_2 = \\sqrt{2}$, which when substituted back gives $x_1 = \\sqrt{2}$, hence $x_1 x_2 = 2$."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### Conclusion P1\n",
-    "\n",
-    "Analytical solutions indicate that at $x_1 = x_2 = \\sqrt{2}$, the constraints are satisfied, and from the substitution into the objective function, we can evaluate the maximum value."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### Optimal Solution\n",
-    "\n",
-    "The optimal solution, denoted by $\\omega^*(\\sigma_T)$, for the given problem under the constraints and specified conditions is:\n",
-    "\n",
-    "$$\n",
-    "\\omega_1^*(\\sigma_T) = \\sqrt{2}, \\quad \\omega_2^*(\\sigma_T) = \\sqrt{2}\n",
-    "$$\n",
-    "\n",
-    "This solution satisfies the constraint $x_1 x_2 \\geq 2$ with $x_1 x_2 = 2$."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### Optimal Value\n",
-    "\n",
-    "The optimal value of the problem, denoted by $R_p(\\sigma_T)$, is calculated by evaluating the objective function at the optimal solution points $\\omega_1^*(\\sigma_T)$ and $\\omega_2^*(\\sigma_T)$. The calculation is as follows:\n",
-    "\n",
-    "$$\n",
-    "R_p(\\sigma_T) = R_p(\\omega_1^*(\\sigma_T), \\omega_2^*(\\sigma_T)) = f(\\sqrt{2}, \\sqrt{2})\n",
-    "$$\n",
-    "$$\n",
-    "= 5 - (\\sqrt{2})^2 - \\sqrt{2} \\times \\sqrt{2} - 3(\\sqrt{2})^2\n",
-    "$$\n",
-    "$$\n",
-    "= -5\n",
-    "$$\n",
-    "\n",
-    "Thus, the optimal value of the objective function, given the constraints and the formulation of the problem, is $R_p(\\sigma_T) = -5$.\n",
-    "\n",
-    "This value represents the maximum return achievable under the given constraints and is obtained at the solution where both $x_1$ and $x_2$ are $\\sqrt{2}$."
    ]
   },
   {
