--- a/FE630 - Homework/FE630 - Homework #2/fe630-hw2-md/fe630-hw2.ipynb
+++ b/FE630 - Homework/FE630 - Homework #2/fe630-hw2-md/fe630-hw2.ipynb
@@ -86,7 +86,7 @@
     "\n",
     "$$\n",
     "\\begin{cases}\n",
-    "\\underset{x_1, x_2}{\\max} & 5 - x_1^2 - x_1x_2 - 3x_2^2 \\tag{3}\n",
+    "\\underset{x_1, x_2}{\\max} & 5 - x_1^2 - x_1x_2 - 3x_2^2 \\tag{2}\n",
     "\\\\\n",
     "\\text{s.t.} & x_1, x_2 \\geq 0\n",
     "\\\\\n",
@@ -101,7 +101,7 @@
     "Construct the Lagrangian to incorporate the constraints with the Lagrange multiplier $\\lambda$:\n",
     "\n",
     "$$\n",
-    "\\mathcal{L}(x_1, x_2, \\lambda) = 5 - x_1^2 - x_1x_2 - 3x_2^2 + \\lambda (x_1 x_2 - 2)\n",
+    "\\mathcal{L}(x_1, x_2, \\lambda) = 5 - x_1^2 - x_1x_2 - 3x_2^2 + \\lambda (x_1 x_2 - 2) \\tag{3}\n",
     "$$\n",
     "\n",
     "##### Conditions for Stationarity\n",
@@ -109,10 +109,10 @@
     "To find the extremum, we calculate the partial derivatives of $\\mathcal{L}$:\n",
     "\n",
     "$$\n",
-    "\\frac{\\partial \\mathcal{L}}{\\partial x_1} = -2x_1 - x_2 + \\lambda x_2 = 0 \\tag{1}\n",
+    "\\frac{\\partial \\mathcal{L}}{\\partial x_1} = -2x_1 - x_2 + \\lambda x_2 = 0 \\tag{4}\n",
     "$$\n",
     "$$\n",
-    "\\frac{\\partial \\mathcal{L}}{\\partial x_2} = -x_1 - 6x_2 + \\lambda x_1 = 0 \\tag{2}\n",
+    "\\frac{\\partial \\mathcal{L}}{\\partial x_2} = -x_1 - 6x_2 + \\lambda x_1 = 0 \\tag{5}\n",
     "$$\n",
     "\n",
     "##### Solving the Equations\n",
@@ -120,7 +120,7 @@
     "Equating and solving the derived equations for $x_1$ and $x_2$, and incorporating the constraints, will give us $\\omega^*(\\sigma_T) = (\\omega_1^*(\\sigma_T), \\omega_2^*(\\sigma_T))$. This involves solving:\n",
     "\n",
     "$$\n",
-    "2x_1^2 - 5x_1x_2 - x_2^2 = 0 \\tag{5}\n",
+    "2x_1^2 - 5x_1x_2 - x_2^2 = 0 \\tag{6}\n",
     "$$\n",
     "\n",
     "##### Optimal Solution and Value\n",
@@ -128,7 +128,7 @@
     "Upon solving the equations and checking the feasibility with respect to the constraints, we can find the values of $\\omega_1^*(\\sigma_T)$ and $\\omega_2^*(\\sigma_T)$. Substituting these values into the original objective function gives us $R_p(\\sigma_T)$, the maximum value of the function:\n",
     "\n",
     "$$\n",
-    "R_p(\\sigma_T) = 5 - (\\omega_1^*(\\sigma_T))^2 - \\omega_1^*(\\sigma_T) \\omega_2^*(\\sigma_T) - 3(\\omega_2^*(\\sigma_T))^2\n",
+    "R_p(\\sigma_T) = 5 - (\\omega_1^*(\\sigma_T))^2 - \\omega_1^*(\\sigma_T) \\omega_2^*(\\sigma_T) - 3(\\omega_2^*(\\sigma_T))^2 \\tag{7}\n",
     "$$"
    ]
   },
