--- a/FE630 - Homework/FE630 - Homework #2/fe630-hw2-md/fe630-hw2.ipynb
+++ b/FE630 - Homework/FE630 - Homework #2/fe630-hw2-md/fe630-hw2.ipynb
@@ -321,7 +321,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Q2 - Optimization w/Inequality Constraints (20 pts)"
+    "### Q2 - Optimization w/Inequality Constraints (20 pts)"
    ]
   },
   {
@@ -332,7 +332,7 @@
     "\n",
     "$$\n",
     "\\begin{cases}\n",
-    "\\underset{x_1, x_2} \\max & (x_1 - 2)^2 + 2(x_2 - 1)^2 \\tag{8}\n",
+    "\\underset{x_1, x_2} \\min & (x_1 - 2)^2 + 2(x_2 - 1)^2 \\tag{8}\n",
     "\\\\\n",
     "\\text{s.t} & x_1 + 4x_2 \\leq 3\n",
     "\\\\\n",
@@ -351,6 +351,46 @@
     "$$\n",
     "\n",
     "and use an optimizer to verify your answer."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Problem Formulation\n",
+    "\n",
+    "We are given the optimization problem:\n",
+    "\n",
+    "$$\n",
+    "\\begin{cases}\n",
+    "\\underset{x_1, x_2} \\min & (x_1 - 2)^2 + 2(x_2 - 1)^2 \\tag{8}\n",
+    "\\\\\n",
+    "\\text{s.t} & x_1 + 4x_2 \\leq 3\n",
+    "\\\\\n",
+    "& x_1 \\geq x_2\n",
+    "\\end{cases}\n",
+    "$$\n",
+    "\n",
+    "The goal is to find $(x_1, x_2)$ that minimizes the objective function subject to the given constraints.\n",
+    "\n",
+    "#### Lagrangian Formulation\n",
+    "\n",
+    "Construct the Lagrangian to incorporate the constraints with Lagrange multipliers $\\lambda_1$ and $\\lambda_2$:\n",
+    "\n",
+    "$$\n",
+    "\\mathcal{L}(x_1, x_2, \\lambda_1, \\lambda_2) = (x_1 - 2)^2 + 2(x_2 - 1)^2 + \\lambda_1 (x_1 + 4x_2 - 3) + \\lambda_2 (x_2 - x_1)\n",
+    "$$\n",
+    "\n",
+    "#### Conditions for Stationarity\n",
+    "\n",
+    "Calculate the partial derivatives of the Lagrangian with respect to $x_1$ and $x_2$, and set them to zero:\n",
+    "\n",
+    "$$\n",
+    "\\frac{\\partial \\mathcal{L}}{\\partial x_1} = 2(x_1 - 2) + \\lambda_1 - \\lambda_2 = 0 \\tag{1}\n",
+    "$$\n",
+    "$$\n",
+    "\\frac{\\partial \\mathcal{L}}{\\partial x_2} = 4(x_2 - 1) + 4\\lambda_1 + \\lambda_2 = 0 \\tag{2}\n",
+    "$$"
    ]
   },
   {
