--- a/FE630 - Homework/FE630 - Homework #2/fe630-hw2-md/fe630-hw2.ipynb
+++ b/FE630 - Homework/FE630 - Homework #2/fe630-hw2-md/fe630-hw2.ipynb
@@ -390,7 +390,39 @@
     "$$\n",
     "$$\n",
     "\\frac{\\partial \\mathcal{L}}{\\partial x_2} = 4(x_2 - 1) + 4\\lambda_1 + \\lambda_2 = 0 \\tag{2}\n",
-    "$$"
+    "$$\n",
+    "\n",
+    "#### Solving System of Equations\n",
+    "\n",
+    "Here are the following solution sets (done on paper):\n",
+    "\n",
+    "1. **First Solution Set:**\n",
+    "   - $\\lambda = \\frac{22}{25}$\n",
+    "   - $x_1 = -\\frac{3}{5}$\n",
+    "   - $x_2 = -\\frac{3}{5}$\n",
+    "   - $\\lambda_2 = -\\frac{48}{25}$\n",
+    "   - This solution is **not feasible** because both $x_1$ and $x_2$ are negative, violating the non-negativity constraints.\n",
+    "\n",
+    "2. **Second Solution Set:**\n",
+    "   - $\\lambda_1 = 0$\n",
+    "   - $x_1 = -\\frac{4}{3}$\n",
+    "   - $x_2 = -\\frac{4}{3}$\n",
+    "   - $\\lambda_2 = -\\frac{4}{3}$\n",
+    "   - This solution is also **not feasible** due to negative values for $x_1$ and $x_2$.\n",
+    "\n",
+    "3. **Third Solution Set:**\n",
+    "   - $\\lambda_1 = 0$\n",
+    "   - $x_1 = 2$\n",
+    "   - $x_2 = 1$\n",
+    "   - $\\lambda_2 = 0$\n",
+    "   - This solution is **feasible** as it satisfies all constraints.\n",
+    "\n",
+    "4. **Fourth Solution Set:**\n",
+    "   - $\\lambda_1 = \\frac{2}{3}$\n",
+    "   - $x_1 = \\frac{5}{3}$\n",
+    "   - $x_2 = \\frac{1}{3}$\n",
+    "   - $\\lambda_2 = 0$\n",
+    "   - This solution appears **feasible** and adheres to the constraint $x_1 + 4x_2 \\leq 3$."
    ]
   },
   {
