--- a/FE630 - Homework/FE630 - Homework #2/fe630-hw2-md/fe630-hw2.ipynb
+++ b/FE630 - Homework/FE630 - Homework #2/fe630-hw2-md/fe630-hw2.ipynb
@@ -398,31 +398,67 @@
     "\n",
     "1. **First Solution Set:**\n",
     "   - $\\lambda = \\frac{22}{25}$\n",
-    "   - $x_1 = -\\frac{3}{5}$\n",
-    "   - $x_2 = -\\frac{3}{5}$\n",
+    "   - $x_1 = \\frac{3}{5}$\n",
+    "   - $x_2 = \\frac{3}{5}$\n",
     "   - $\\lambda_2 = -\\frac{48}{25}$\n",
-    "   - This solution is **not feasible** because both $x_1$ and $x_2$ are negative, violating the non-negativity constraints.\n",
+    "   - This solution is **feasible** since it satisfies all constraints.\n",
     "\n",
     "2. **Second Solution Set:**\n",
     "   - $\\lambda_1 = 0$\n",
-    "   - $x_1 = -\\frac{4}{3}$\n",
-    "   - $x_2 = -\\frac{4}{3}$\n",
+    "   - $x_1 = \\frac{4}{3}$\n",
+    "   - $x_2 = \\frac{4}{3}$\n",
     "   - $\\lambda_2 = -\\frac{4}{3}$\n",
-    "   - This solution is also **not feasible** due to negative values for $x_1$ and $x_2$.\n",
+    "   - This solution is **not feasible** since it fails $x_1 + 4x_2 \\leq 3$ $(6.67)$.\n",
     "\n",
     "3. **Third Solution Set:**\n",
     "   - $\\lambda_1 = 0$\n",
     "   - $x_1 = 2$\n",
     "   - $x_2 = 1$\n",
     "   - $\\lambda_2 = 0$\n",
-    "   - This solution is **feasible** as it satisfies all constraints.\n",
+    "   - This solution is not **feasible** since it fails $x_1 + 4x_2 \\leq 3$ $(6)$.\n",
     "\n",
     "4. **Fourth Solution Set:**\n",
     "   - $\\lambda_1 = \\frac{2}{3}$\n",
     "   - $x_1 = \\frac{5}{3}$\n",
     "   - $x_2 = \\frac{1}{3}$\n",
     "   - $\\lambda_2 = 0$\n",
-    "   - This solution appears **feasible** and adheres to the constraint $x_1 + 4x_2 \\leq 3$."
+    "   - This solution is **feasible** since it satisfies all constraints."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Objective value for Third Solution Set: 0\n",
+      "Objective value for Fourth Solution Set: 1.0000000000000002\n"
+     ]
+    }
+   ],
+   "source": [
+    "def objective_function(x1, x2):\n",
+    "    return (x1 - 2)**2 + 2*(x2 - 1)**2\n",
+    "\n",
+    "# Third Solution Set\n",
+    "value_3 = objective_function(2, 1)\n",
+    "# Fourth Solution Set\n",
+    "value_4 = objective_function(5/3, 1/3)\n",
+    "\n",
+    "print(\"Objective value for Third Solution Set:\", value_3)\n",
+    "print(\"Objective value for Fourth Solution Set:\", value_4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Final Answer\n",
+    "\n",
+    "Since it's looking for a **minima**, the answer is the set (x_1 = 2, x_2 = )"
    ]
   }
  ],
