--- a/FE630 - Homework/FE630 - Homework #2/fe630-hw2-md/fe630-hw2.ipynb
+++ b/FE630 - Homework/FE630 - Homework #2/fe630-hw2-md/fe630-hw2.ipynb
@@ -427,14 +427,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Objective value for Third Solution Set: 0\n",
+      "Objective value for Third Solution Set: 2.28\n",
       "Objective value for Fourth Solution Set: 1.0000000000000002\n"
      ]
     }
@@ -444,7 +444,7 @@
     "    return (x1 - 2)**2 + 2*(x2 - 1)**2\n",
     "\n",
     "# Third Solution Set\n",
-    "value_3 = objective_function(2, 1)\n",
+    "value_3 = objective_function(3/5, 3/5)\n",
     "# Fourth Solution Set\n",
     "value_4 = objective_function(5/3, 1/3)\n",
     "\n",
@@ -458,7 +458,7 @@
    "source": [
     "#### Final Answer\n",
     "\n",
-    "Since it's looking for a **minima**, the answer is the set (x_1 = 2, x_2 = )"
+    "Since it's looking for a **minima**, the answer is the set $(x_1 = 5/3, x_2 = 1/3)^\\intercal$ as that yields $1$ (arithmetic done on paper & confirmed via optimizer)."
    ]
   }
  ],
