--- a/FE630 - Homework/FE630 - Homework #2/fe630-hw2-md/fe630-hw2.ipynb
+++ b/FE630 - Homework/FE630 - Homework #2/fe630-hw2-md/fe630-hw2.ipynb
@@ -378,7 +378,7 @@
     "Construct the Lagrangian to incorporate the constraints with Lagrange multipliers $\\lambda_1$ and $\\lambda_2$:\n",
     "\n",
     "$$\n",
-    "\\mathcal{L}(x_1, x_2, \\lambda_1, \\lambda_2) = (x_1 - 2)^2 + 2(x_2 - 1)^2 + \\lambda_1 (x_1 + 4x_2 - 3) + \\lambda_2 (x_2 - x_1)\n",
+    "\\mathcal{L}(x_1, x_2, \\lambda_1, \\lambda_2) = (x_1 - 2)^2 + 2(x_2 - 1)^2 + \\lambda_1 (x_1 + 4x_2 - 3) + \\lambda_2 (x_2 - x_1) \\tag{9}\n",
     "$$\n",
     "\n",
     "#### Conditions for Stationarity\n",
@@ -386,10 +386,10 @@
     "Calculate the partial derivatives of the Lagrangian with respect to $x_1$ and $x_2$, and set them to zero:\n",
     "\n",
     "$$\n",
-    "\\frac{\\partial \\mathcal{L}}{\\partial x_1} = 2(x_1 - 2) + \\lambda_1 - \\lambda_2 = 0 \\tag{1}\n",
+    "\\frac{\\partial \\mathcal{L}}{\\partial x_1} = 2(x_1 - 2) + \\lambda_1 - \\lambda_2 = 0 \\tag{10}\n",
     "$$\n",
     "$$\n",
-    "\\frac{\\partial \\mathcal{L}}{\\partial x_2} = 4(x_2 - 1) + 4\\lambda_1 + \\lambda_2 = 0 \\tag{2}\n",
+    "\\frac{\\partial \\mathcal{L}}{\\partial x_2} = 4(x_2 - 1) + 4\\lambda_1 + \\lambda_2 = 0 \\tag{11}\n",
     "$$\n",
     "\n",
     "#### Solving System of Equations\n",
