--- a/FE630 - Homework/FE630 - Homework #2/fe630-hw2-md/fe630-hw2.ipynb
+++ b/FE630 - Homework/FE630 - Homework #2/fe630-hw2-md/fe630-hw2.ipynb
@@ -460,6 +460,13 @@
     "\n",
     "Since it's looking for a **minima**, the answer is the set $(x_1 = 5/3, x_2 = 1/3)^\\intercal$ as that yields $1$ (arithmetic done on paper & confirmed via optimizer)."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Q3 - Mean-Variance Optimization (40 pts)"
+   ]
   }
  ],
  "metadata": {
