--- a/FE630 - Homework/FE630 - Homework #2/fe630-hw2-md/fe630-hw2.ipynb
+++ b/FE630 - Homework/FE630 - Homework #2/fe630-hw2-md/fe630-hw2.ipynb
@@ -467,6 +467,20 @@
    "source": [
     "### Q3 - Mean-Variance Optimization (40 pts)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Consider an Investment Universe made of 3 stocks $S_1, S_2,$ & $S_3$ with the following characteristics:\n",
+    "\n",
+    "- Covariance Matrix: $\\Sigma = \n",
+    "\\begin{pmatrix}\n",
+    "0.010 & 0.002 & 0.001 \\\\\n",
+    "0.002 & 0.011 & 0.003 \\\\\n",
+    "0.001 & 0.003 & 0.020 \\\\\n",
+    "\\end{pmatrix};$"
+   ]
   }
  ],
  "metadata": {
