--- a/FE630 - Homework/FE630 - Homework #2/fe630-hw2-md/fe630-hw2.ipynb
+++ b/FE630 - Homework/FE630 - Homework #2/fe630-hw2-md/fe630-hw2.ipynb
@@ -474,12 +474,22 @@
    "source": [
     "Consider an Investment Universe made of 3 stocks $S_1, S_2,$ & $S_3$ with the following characteristics:\n",
     "\n",
-    "- Covariance Matrix: $\\Sigma = \n",
+    "- Covariance Matrix: $\\bm{\\Sigma} = \n",
     "\\begin{pmatrix}\n",
     "0.010 & 0.002 & 0.001 \\\\\n",
     "0.002 & 0.011 & 0.003 \\\\\n",
     "0.001 & 0.003 & 0.020 \\\\\n",
-    "\\end{pmatrix};$"
+    "\\end{pmatrix};$\n",
+    "\n",
+    "- Expected Return Vector: $\\bm{\\mu} = \\begin{pmatrix}\n",
+    "\\mu_1 \\\\\n",
+    "\\mu_2 \\\\ \n",
+    "\\mu_3 \\\\\n",
+    "\\end{pmatrix} = \\begin{pmatrix}\n",
+    "4.27\\% \\\\\n",
+    "0.15\\% \\\\\n",
+    "2.85\\%\n",
+    "\\end{pmatrix}$"
    ]
   }
  ],
