--- a/FE630 - Homework/FE630 - Homework #2/fe630-hw2-md/fe630-hw2.ipynb
+++ b/FE630 - Homework/FE630 - Homework #2/fe630-hw2-md/fe630-hw2.ipynb
@@ -491,6 +491,13 @@
     "2.85\\%\n",
     "\\end{pmatrix}$"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 3.1 Find the Global Minimal Variance Portfolio. (5 pts)"
+   ]
   }
  ],
  "metadata": {
