--- a/FE630 - Homework/FE630 - Homework #2/fe630-hw2-md/fe630-hw2.ipynb
+++ b/FE630 - Homework/FE630 - Homework #2/fe630-hw2-md/fe630-hw2.ipynb
@@ -498,6 +498,22 @@
    "source": [
     "#### 3.1 Find the Global Minimal Variance Portfolio. (5 pts)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### GMVP Construction\n",
+    "\n",
+    "The goal is to find the portfolio weights that **minimize** the *portfolio's variance* $(\\sigma_P)$, subject to the weights summing to 1."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
