--- a/FE630 - Homework/FE630 - Homework #2/fe630-hw2-md/fe630-hw2.ipynb
+++ b/FE630 - Homework/FE630 - Homework #2/fe630-hw2-md/fe630-hw2.ipynb
@@ -510,10 +510,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Optimal weights for the Global Minimum Variance Portfolio:\n",
+      "[0.43878636 0.37007632 0.19113732]\n",
+      "Minimum Variance of the Portfolio: 0.005404212545913877\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from scipy.optimize import minimize\n",
+    "\n",
+    "# Define the covariance matrix\n",
+    "Sigma = np.array([\n",
+    "    [0.010, 0.002, 0.001],\n",
+    "    [0.002, 0.011, 0.003],\n",
+    "    [0.001, 0.003, 0.020]\n",
+    "])\n",
+    "\n",
+    "# Objective function: Portfolio Variance\n",
+    "def portfolio_variance(weights, covariance_matrix):\n",
+    "    return weights.T @ covariance_matrix @ weights\n",
+    "\n",
+    "# Constraint: Weights must sum to 1\n",
+    "def check_sum(weights):\n",
+    "    return np.sum(weights) - 1\n",
+    "\n",
+    "# Constraint dictionary\n",
+    "cons = ({'type': 'eq', 'fun': check_sum})\n",
+    "\n",
+    "# Initial guess for weights\n",
+    "initial_weights = np.ones(3) / 3\n",
+    "\n",
+    "# Bounds for weights\n",
+    "bounds = tuple((0, 1) for _ in range(3))\n",
+    "\n",
+    "# Minimize the portfolio variance\n",
+    "opt_results = minimize(portfolio_variance, initial_weights, args=(Sigma,), method='SLSQP', bounds=bounds, constraints=cons)\n",
+    "\n",
+    "# Print the optimal weights\n",
+    "print(\"Optimal weights for the Global Minimum Variance Portfolio:\")\n",
+    "print(opt_results.x)\n",
+    "\n",
+    "# Calculate the minimal variance\n",
+    "min_var = portfolio_variance(opt_results.x, Sigma)\n",
+    "print(\"Minimum Variance of the Portfolio:\", min_var)"
+   ]
   }
  ],
  "metadata": {
