--- a/FE630 - Homework/FE630 - Homework #2/fe630-hw2-md/fe630-hw2.ipynb
+++ b/FE630 - Homework/FE630 - Homework #2/fe630-hw2-md/fe630-hw2.ipynb
@@ -474,14 +474,14 @@
    "source": [
     "Consider an Investment Universe made of 3 stocks $S_1, S_2,$ & $S_3$ with the following characteristics:\n",
     "\n",
-    "- Covariance Matrix: $\\bm{\\Sigma} = \n",
+    "- Covariance Matrix: $\\bf{\\Sigma} = \n",
     "\\begin{pmatrix}\n",
     "0.010 & 0.002 & 0.001 \\\\\n",
     "0.002 & 0.011 & 0.003 \\\\\n",
     "0.001 & 0.003 & 0.020 \\\\\n",
     "\\end{pmatrix};$\n",
     "\n",
-    "- Expected Return Vector: $\\bm{\\mu} = \\begin{pmatrix}\n",
+    "- Expected Return Vector: $\\boldsymbol{\\mu} = \\begin{pmatrix}\n",
     "\\mu_1 \\\\\n",
     "\\mu_2 \\\\ \n",
     "\\mu_3 \\\\\n",
