--- a/FE630 - Homework/FE630 - Homework #2/fe630-hw2-md/fe630-hw2.ipynb
+++ b/FE630 - Homework/FE630 - Homework #2/fe630-hw2-md/fe630-hw2.ipynb
@@ -496,7 +496,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 3.1 Find the Global Minimal Variance Portfolio. (5 pts)"
+    "#### 3.1 Global Minimal Variance Portfolio (5 pts)"
    ]
   },
   {
@@ -561,6 +561,20 @@
     "# Calculate the minimal variance\n",
     "min_var = portfolio_variance(opt_results.x, Sigma)\n",
     "print(\"Minimum Variance of the Portfolio:\", min_var)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 3.2 MVP w/Expected Return (5 pts)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Find the **Minimum Variance Portfolio** $(P_1)$ with Expected Return equal to $\\mu_1$. Find the **Minimum Variance Portfolio** $(P_2)$ with Expected Return equal to $\\frac{\\mu_2 + \\mu_3}{2}$."
    ]
   }
  ],
