--- a/FE630 - Homework/FE630 - Homework #2/fe630-hw2-md/fe630-hw2.ipynb
+++ b/FE630 - Homework/FE630 - Homework #2/fe630-hw2-md/fe630-hw2.ipynb
@@ -576,6 +576,79 @@
    "source": [
     "Find the **Minimum Variance Portfolio** $(P_1)$ with Expected Return equal to $\\mu_1$. Find the **Minimum Variance Portfolio** $(P_2)$ with Expected Return equal to $\\frac{\\mu_2 + \\mu_3}{2}$."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Optimal weights for Portfolio P1 (target return = 0.0427):\n",
+      "[1.00000000e+00 0.00000000e+00 1.09198739e-12]\n",
+      "Minimum Variance of Portfolio P1: 0.009999999999980346\n",
+      "\n",
+      "Optimal weights for Portfolio P2 (target return = 0.0150):\n",
+      "[0.22965758 0.62078287 0.14955955]\n",
+      "Minimum Variance of Portfolio P2: 0.006409901313492481\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from scipy.optimize import minimize\n",
+    "\n",
+    "# Define the covariance matrix\n",
+    "Sigma = np.array([\n",
+    "    [0.010, 0.002, 0.001],\n",
+    "    [0.002, 0.011, 0.003],\n",
+    "    [0.001, 0.003, 0.020]\n",
+    "])\n",
+    "\n",
+    "# Define the expected returns vector\n",
+    "mu = np.array([0.0427, 0.0015, 0.0285])  # Convert percentages to decimals for calculation\n",
+    "\n",
+    "# Define target returns\n",
+    "target_return_P1 = mu[0]\n",
+    "target_return_P2 = (mu[1] + mu[2]) / 2\n",
+    "\n",
+    "# Objective function: Portfolio Variance\n",
+    "def portfolio_variance(weights, covariance_matrix):\n",
+    "    return weights.T @ covariance_matrix @ weights\n",
+    "\n",
+    "# Constraint: Expected return should match target return\n",
+    "def target_return_constraint(weights, target_return):\n",
+    "    return weights @ mu - target_return\n",
+    "\n",
+    "# Constraint: Weights must sum to 1\n",
+    "def weights_sum_constraint(weights):\n",
+    "    return np.sum(weights) - 1\n",
+    "\n",
+    "# Minimize the portfolio variance subject to the return constraint and sum of weights equals 1\n",
+    "def find_min_variance_portfolio(target_return):\n",
+    "    cons = (\n",
+    "        {'type': 'eq', 'fun': weights_sum_constraint},\n",
+    "        {'type': 'eq', 'fun': lambda w: target_return_constraint(w, target_return)}\n",
+    "    )\n",
+    "    bounds = tuple((0, 1) for _ in range(len(mu)))\n",
+    "    initial_weights = np.array([1/len(mu)] * len(mu))\n",
+    "    result = minimize(portfolio_variance, initial_weights, args=(Sigma,), method='SLSQP', bounds=bounds, constraints=cons)\n",
+    "    return result.x, result.fun\n",
+    "\n",
+    "# Calculate optimal portfolios\n",
+    "optimal_weights_P1, min_var_P1 = find_min_variance_portfolio(target_return_P1)\n",
+    "optimal_weights_P2, min_var_P2 = find_min_variance_portfolio(target_return_P2)\n",
+    "\n",
+    "print(\"Optimal weights for Portfolio P1 (target return = {:.4f}):\".format(target_return_P1))\n",
+    "print(optimal_weights_P1)\n",
+    "print(\"Minimum Variance of Portfolio P1:\", min_var_P1)\n",
+    "\n",
+    "print(\"\\nOptimal weights for Portfolio P2 (target return = {:.4f}):\".format(target_return_P2))\n",
+    "print(optimal_weights_P2)\n",
+    "print(\"Minimum Variance of Portfolio P2:\", min_var_P2)"
+   ]
   }
  ],
  "metadata": {
