--- a/FE630 - Homework/FE630 - Homework #2/fe630-hw2-md/fe630-hw2.ipynb
+++ b/FE630 - Homework/FE630 - Homework #2/fe630-hw2-md/fe630-hw2.ipynb
@@ -649,6 +649,20 @@
     "print(optimal_weights_P2)\n",
     "print(\"Minimum Variance of Portfolio P2:\", min_var_P2)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 3.3 Two-Fund Theorem"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using the Portfolios $(P_1)$ and $(P_2)$ we previously found, apply the Two-Fund Theorem to find the **Minimum Variance Portfolio** with Expected Return equal to $4\\%$."
+   ]
   }
  ],
  "metadata": {
