--- a/FE630 - Homework/FE630 - Homework #2/fe630-hw2-md/fe630-hw2.ipynb
+++ b/FE630 - Homework/FE630 - Homework #2/fe630-hw2-md/fe630-hw2.ipynb
@@ -654,7 +654,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 3.3 Two-Fund Theorem"
+    "#### 3.3 Two-Fund Theorem (5 pts)"
    ]
   },
   {
@@ -662,6 +662,57 @@
    "metadata": {},
    "source": [
     "Using the Portfolios $(P_1)$ and $(P_2)$ we previously found, apply the Two-Fund Theorem to find the **Minimum Variance Portfolio** with Expected Return equal to $4\\%$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The Two-Fund Theorem states that any portfolio on the minimum-variance frontier can be constructed as a **combination** of any two portfolios also on that frontier. Thus, to find the Minimum Variance (MVP), we can make a **linear combination**."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Alpha for combining P1 and P2: 0.9025270758226638\n",
+      "Weights of the new minimum variance portfolio with target return 4%: [0.92491247 0.06050952 0.01457801]\n",
+      "Variance of the new portfolio: 0.008855280043488664\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# Define the expected returns of P1 and P2\n",
+    "mu_P1 = optimal_weights_P1 @ mu\n",
+    "mu_P2 = optimal_weights_P2 @ mu\n",
+    "\n",
+    "# Define the target return for the new portfolio\n",
+    "target_return_new = 0.04  # 4%\n",
+    "\n",
+    "# Calculate the weights for the combination of P1 and P2 to achieve the target return\n",
+    "# Using the formula alpha = (mu_P2 - target_return_new) / (mu_P2 - mu_P1)\n",
+    "alpha = (mu_P2 - target_return_new) / (mu_P2 - mu_P1)\n",
+    "\n",
+    "# Validate alpha is within reasonable bounds (0 <= alpha <= 1)\n",
+    "if 0 <= alpha <= 1:\n",
+    "    # Compute the new portfolio's weights as a linear combination of P1 and P2\n",
+    "    new_portfolio_weights = alpha * optimal_weights_P1 + (1 - alpha) * optimal_weights_P2\n",
+    "    \n",
+    "    # Calculate the variance of the new portfolio\n",
+    "    new_portfolio_variance = new_portfolio_weights.T @ Sigma @ new_portfolio_weights\n",
+    "    \n",
+    "    print(\"Alpha for combining P1 and P2:\", alpha)\n",
+    "    print(\"Weights of the new minimum variance portfolio with target return 4%:\", new_portfolio_weights)\n",
+    "    print(\"Variance of the new portfolio:\", new_portfolio_variance)\n",
+    "else:\n",
+    "    print(\"No feasible solution: alpha out of bounds. Check the target return or input portfolios.\")"
    ]
   }
  ],
