--- a/FE630 - Homework/FE630 - Homework #2/fe630-hw2-md/fe630-hw2.ipynb
+++ b/FE630 - Homework/FE630 - Homework #2/fe630-hw2-md/fe630-hw2.ipynb
@@ -714,6 +714,20 @@
     "else:\n",
     "    print(\"No feasible solution: alpha out of bounds. Check the target return or input portfolios.\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 3.4 Two-Fund Theorem EF Plot (5 pts)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Apply the **Two-Fund Theorem** to generate and plot the **Mean-Variance Efficient Frontier** (the graph should also display the Expected Returns and Volatilities of securities $S_1, S_2,$ and $S_3$)."
+   ]
   }
  ],
  "metadata": {
