--- a/FE630 - Final Project/fe630-fp-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fp-jpm.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "**Author**: Sid Bhatia\n",
     "\n",
-    "**Date**: May 14h, 2024\n",
+    "**Date**: May 14th, 2024\n",
     "\n",
     "**Pledge**: I pledge my honor that I have abided by the Stevens Honor System.\n",
     "\n",
