--- a/FE630 - Final Project/fe630-fp-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fp-jpm.ipynb
@@ -17,7 +17,7 @@
     "\n",
     "**Pledge**: I pledge my honor that I have abided by the Stevens Honor System.\n",
     "\n",
-    "**Professor**: Papa Momar Ndiaye"
+    "**Professor**: [Papa Momar Ndiaye](https://www.stevens.edu/profile/pndiaye)"
    ]
   }
  ],
