--- a/FE630 - Final Project/fe630-fp-md/fe630-fp-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fp-md/fe630-fp-jpm.ipynb
@@ -19,6 +19,26 @@
     "\n",
     "**Professor**: [Papa Momar Ndiaye](https://www.stevens.edu/profile/pndiaye)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Overview"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.1 Goal\n",
+    "\n",
+    "The goal of this project to build and compare *two factor-based long short allocation models* with constraints on their *betas*. The first strategy considers a **target Beta** in the interval $[-0.5, 0.5]$, while the second has a target Beta in the interval $[-2, +2]$.\n",
+    "\n",
+    "The first strategy operates similar to a **Value-at-Risk Utility** corresponding to **Robust Optimization**; the second strategy incorporates an **Information Ratio** term to limit the deviations from a benchmark, provided those deviations yield a 'high return.'\n",
+    "\n",
+    "Once the optimization models are built, we want to *compare* the outcomes of the two models while simultaneously evaluating their sensitivity to the *length* of the estimators for the **covariance matrix** in tandem with the **expected returns** under various market regimes/scenarios. "
+   ]
   }
  ],
  "metadata": {
