--- a/FE630 - Final Project/fe630-fp-md/fe630-fp-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fp-md/fe630-fp-jpm.ipynb
@@ -41,7 +41,7 @@
     "\n",
     "### 1.2 Reallocation\n",
     "\n",
-    "The portfolios will be *reallocated* or, in other words, reoptimized weekly from the beginning of **March 2007** to the end of **March 2024**. Our *investment universe* encompasses a set of exchange-traded funds (**ETFs**) which is large enough to represent the '**Global World Economy**' (as according to some).\n",
+    "The portfolios will be *reallocated* or, in other words, 'reoptimized' weekly from the beginning of **March 2007** to the end of **March 2024**. Our *investment universe* encompasses a set of exchange-traded funds (**ETFs**) which is large enough to represent the '**Global World Economy**' (as according to some).\n",
     "\n",
     "We will utilize the [Fama–French Three-Factor Model](https://en.wikipedia.org/wiki/Fama%E2%80%93French_three-factor_model) which incorporates the following factors:\n",
     "- Momentum\n",
