--- a/FE630 - Final Project/fe630-fp-md/fe630-fp-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fp-md/fe630-fp-jpm.ipynb
@@ -48,7 +48,11 @@
     "- Value\n",
     "- Size.\n",
     "\n",
-    "Regarding data accessability, these factors have historical values available for ***free*** from ***Ken French's*** [personal website](https://mba.tuck.dartmouth.edu/pages/faculty/ken.french/) in tandem with Yahoo Finance."
+    "Regarding data accessability, these factors have historical values available for ***free*** from ***Ken French's*** [personal website](https://mba.tuck.dartmouth.edu/pages/faculty/ken.french/) in tandem with Yahoo Finance.\n",
+    "\n",
+    "### 1.3 Performance Evaluation\n",
+    "\n",
+    "Naturally, the performance as well as the risk profiles of the aforementioned strategies may be (relatively) sensitive to the *target Beta* and the (current) market environment. For example, a '**low Beta**' (essentially) means that a strategy is created with the objective or aim to be '**decorrelated**' (no linear relationship between entites) with the 'Global Market,' which, in our case, is represented by the **S&P 500** (i.e., no *systematic relationship*)."
    ]
   }
  ],
