--- a/FE630 - Final Project/fe630-fp-md/fe630-fp-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fp-md/fe630-fp-jpm.ipynb
@@ -56,7 +56,14 @@
     "\n",
     "For example, a '**low Beta**' (essentially) means that a strategy is created with the objective or aim to be '**decorrelated**' (no linear relationship between entites) with the 'Global Market,' which, in our case, is represented by the **S&P 500** (i.e., no *systematic relationship*).\n",
     "\n",
-    "A '**high Beta**' is simply the antithesis, or opposite, of what we just discussed. In layman's terms, we have a (higher) appetite for '*risk*' (in this case, let's keep it simple and define our premise as $\\sigma$ or **standard deviation**) and desire to ride or 'scale up' the *market risk* (**systematic risk**). "
+    "A '**high Beta**' is simply the antithesis, or opposite, of what we just discussed. In layman's terms, we have a (higher) appetite for '*risk*' (in this case, let's keep it simple and define our premise as $\\sigma$ or **standard deviation**) and desire to ride or 'scale up' the *market risk* (**systematic risk**). \n",
+    "\n",
+    "Moreover, it's imperative that one acknowledges that such a (described) strategy is more probable to be (quite) sensitive to the *estimators* used for the **Risk Model** and the **Alpha Model** (e.g., the length of the *look-back period* utilized); therefore, it is necessary to understand and, most importantly, *comprehend* the impact of said estimators on the **Portfolio's** characteristics:\n",
+    "- (Realized) Return : $\\mu_h$\n",
+    "- (Historical) Volatility : $\\sigma_h$\n",
+    "- [Skewness](https://en.wikipedia.org/wiki/Skewness) : $(\\mathbb{E}[(\\frac{x - \\mu}{\\sigma})^3]) = \\frac{\\mu_3}{\\sigma_3} = \\frac{\\kappa_3}{\\kappa_2^{3/2}}$\n",
+    "- [VaR](https://en.wikipedia.org/wiki/Value_at_risk) / [Expected Shortfall](https://en.wikipedia.org/wiki/Expected_shortfall)\n",
+    "- [Sharpe Ratio](https://en.wikipedia.org/wiki/Sharpe_ratio) : $S_a = \\frac{\\mathbb{E}[R_a - R_b]}{\\sigma_a} = \\frac{\\mathbb{E}[R_a - R_b]}{\\sqrt{\\mathbb{V}(R_a - R_b)}}$"
    ]
   }
  ],
