--- a/FE630 - Final Project/fe630-fp-md/fe630-fp-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fp-md/fe630-fp-jpm.ipynb
@@ -61,7 +61,7 @@
     "Moreover, it's imperative that one acknowledges that such a (described) strategy is more probable to be (quite) sensitive to the *estimators* used for the **Risk Model** and the **Alpha Model** (e.g., the length of the *look-back period* utilized); therefore, it is necessary to understand and, most importantly, *comprehend* the impact of said estimators on the **Portfolio's** characteristics:\n",
     "- (Realized) Return : $\\mu_h$\n",
     "\n",
-    "- (Historical) [Volatility](https://en.wikipedia.org/wiki/Volatility_(finance)) : $\\sigma_h$\n",
+    "- (Historical) [Volatility](https://en.wikipedia.org/wiki/Volatility_(finance) : $\\sigma_h$\n",
     "\n",
     "- [Skewness](https://en.wikipedia.org/wiki/Skewness) : $(\\mathbb{E}[(\\frac{x - \\mu}{\\sigma})^3]) = \\frac{\\mu_3}{\\sigma_3} = \\frac{\\kappa_3}{\\kappa_2^{3/2}}$\n",
     "\n",
