--- a/FE630 - Final Project/fe630-fp-md/fe630-fp-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fp-md/fe630-fp-jpm.ipynb
@@ -44,9 +44,9 @@
     "The portfolios will be *reallocated* or, in other words, 'reoptimized' weekly from the beginning of **March 2007** to the end of **March 2024**. Our *investment universe* encompasses a set of exchange-traded funds (**ETFs**) which is large enough to represent the '**Global World Economy**' (as according to some).\n",
     "\n",
     "We will utilize the [Fama–French Three-Factor Model](https://en.wikipedia.org/wiki/Fama%E2%80%93French_three-factor_model) which incorporates the following factors:\n",
-    "- Momentum\n",
-    "- Value\n",
-    "- Size.\n",
+    "- [Momentum](https://en.wikipedia.org/wiki/Momentum_investing)\n",
+    "- [Value](https://en.wikipedia.org/wiki/Value_investing)\n",
+    "- [Size](https://en.wikipedia.org/wiki/Market_capitalization).\n",
     "\n",
     "Regarding data accessability, these factors have historical values available for ***free*** from ***Ken French's*** [personal website](https://mba.tuck.dartmouth.edu/pages/faculty/ken.french/) in tandem with Yahoo Finance.\n",
     "\n",
@@ -61,7 +61,7 @@
     "Moreover, it's imperative that one acknowledges that such a (described) strategy is more probable to be (quite) sensitive to the *estimators* used for the **Risk Model** and the **Alpha Model** (e.g., the length of the *look-back period* utilized); therefore, it is necessary to understand and, most importantly, *comprehend* the impact of said estimators on the **Portfolio's** characteristics:\n",
     "- (Realized) Return : $\\mu_h$\n",
     "\n",
-    "- (Historical) [Volatility](https://en.wikipedia.org/wiki/Volatility_(finance) : $\\sigma_h$\n",
+    "- (Historical) [Volatility](https://en.wikipedia.org/wiki/Volatility_(finance)) : $\\sigma_h$\n",
     "\n",
     "- [Skewness](https://en.wikipedia.org/wiki/Skewness) : $(\\mathbb{E}[(\\frac{x - \\mu}{\\sigma})^3]) = \\frac{\\mu_3}{\\sigma_3} = \\frac{\\kappa_3}{\\kappa_2^{3/2}}$\n",
     "\n",
