--- a/FE630 - Final Project/fe630-fp-md/fe630-fp-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fp-md/fe630-fp-jpm.ipynb
@@ -59,7 +59,7 @@
     "A '**high Beta**' is simply the antithesis, or opposite, of what we just discussed. In layman's terms, we have a (higher) appetite for '*risk*' (in this case, let's keep it simple and define our premise as $\\sigma$ or **standard deviation**) and desire to ride or 'scale up' the *market risk* (**systematic risk**). \n",
     "\n",
     "Moreover, it's imperative that one acknowledges that such a (described) strategy is more probable to be (quite) sensitive to the *estimators* used for the **Risk Model** and the **Alpha Model** (e.g., the length of the *look-back period* utilized); therefore, it is necessary to understand and, most importantly, *comprehend* the impact of said estimators on the **Portfolio's** characteristics:\n",
-    "- (Realized) Return : $\\mu_h$\n",
+    "- (Realized) [Return](https://en.wikipedia.org/wiki/Rate_of_return) : $\\mu_h$\n",
     "\n",
     "- (Historical) [Volatility](https://en.wikipedia.org/wiki/Volatility_(finance)) : $\\sigma_h$\n",
     "\n",
