--- a/FE630 - Final Project/fe630-fp-md/fe630-fp-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fp-md/fe630-fp-jpm.ipynb
@@ -67,7 +67,14 @@
     "\n",
     "- [VaR](https://en.wikipedia.org/wiki/Value_at_risk) / [Expected Shortfall](https://en.wikipedia.org/wiki/Expected_shortfall)\n",
     "\n",
-    "- [Sharpe Ratio](https://en.wikipedia.org/wiki/Sharpe_ratio) : $S_a = \\frac{\\mathbb{E}[R_a - R_b]}{\\sigma_a} = \\frac{\\mathbb{E}[R_a - R_b]}{\\sqrt{\\mathbb{V}(R_a - R_b)}}$"
+    "- [Sharpe Ratio](https://en.wikipedia.org/wiki/Sharpe_ratio) : $S_a = \\frac{\\mathbb{E}[R_a - R_b]}{\\sigma_a} = \\frac{\\mathbb{E}[R_a - R_b]}{\\sqrt{\\mathbb{V}(R_a - R_b)}}$\n",
+    "\n",
+    "### 1.4 Simplification\n",
+    "\n",
+    "To make it easier, we assume that once the **Factor Model** (FM) has been constructed, we will use (trend following)[https://en.wikipedia.org/wiki/Trend_following] estimators for the **Expected Returns**. Since the quality of the estimators depend on the **look-back period**, we define three cases:\n",
+    "- ***Long-Term Estimator (LTE)*** : $\\text{LT} \\Rightarrow \\text{LB} \\in \\{180 \\; \\text{Days}\\}$.\n",
+    "- ***Mid-Term Estimator (MTE)*** : $\\text{MT} \\Rightarrow \\text{MT} \\in \\{90 \\; \\text{Days}\\}$.\n",
+    "- ***Short-Term Estimator (STE)*** : $\\text{ST} \\Rightarrow \\text{ST} \\in \\{40 \\; \\text{Days}, 60 \\; \\text{Days}\\}$.  "
    ]
   }
  ],
