--- a/FE630 - Final Project/fe630-fp-md/fe630-fp-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fp-md/fe630-fp-jpm.ipynb
@@ -81,6 +81,22 @@
     "\n",
     "Overall, the goal of this fun, entertaining project is to conceptualize, visualize, understand, analyze, and compare the behavior of our ideas; we want to *see* if we can (actually) make some $\\boldsymbol{\\$\\$\\$}$, especially during momentous, historical (time) periods such as the **Subprime Mortgage Crisis** of *2008*, the horrendous commencement of **Coronavirus SARS-CoV-2 Disease** of *2019*, et cetera."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. (Investment) Strategy\n",
+    "\n",
+    "Alrighty, let's get to the fun, juicy portion; shall we?\n",
+    "\n",
+    "### 2.1 (Mathematical) Strategic Formulation\n",
+    "\n",
+    "Let's make things interesting—spicy, one may say.\n",
+    "\n",
+    "Consider two strats ([clipping](https://en.wikipedia.org/wiki/Clipping_(morphology)#:~:text=In%20linguistics%2C%20clipping%2C%20also%20called,an%20existing%20word%20or%20phrase.) of 'strategies,' as embodied in *Morphology*):\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
