--- a/FE630 - Final Project/fe630-fp-md/fe630-fp-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fp-md/fe630-fp-jpm.ipynb
@@ -95,7 +95,28 @@
     "Let's make things interesting—spicy, one may say.\n",
     "\n",
     "Consider two strats ([clipping](https://en.wikipedia.org/wiki/Clipping_(morphology)#:~:text=In%20linguistics%2C%20clipping%2C%20also%20called,an%20existing%20word%20or%20phrase.) of 'strategies,' as embodied in *Morphology*):\n",
-    "\n"
+    "\n",
+    "$$\n",
+    "\\text{(Strategy I)} \n",
+    "\\quad \n",
+    "\n",
+    "\\begin{cases}\n",
+    "\n",
+    "\\underset{\\omega \\in \\mathbb{R}^n} \\max \\; \\rho^T \\omega - \\lambda \\sqrt{\\omega^T \\Sigma \\omega} \n",
+    "\\\\\n",
+    "\n",
+    "\\\\\n",
+    "\n",
+    "-0.5 \\leq \\sum_{i=1}^n \\beta_i^m \\omega_i \\leq 0.5 \n",
+    "\n",
+    "\\\\\n",
+    "\\\\\n",
+    "\\sum_{i=1}^n \\omega_i = 1, \\quad -2 \\leq \\omega_i \\leq 2,\n",
+    "\\end{cases} \n",
+    "\\quad \n",
+    "\n",
+    "\\tag{1}\n",
+    "$$"
    ]
   }
  ],
