--- a/FE630 - Final Project/fe630-fp-md/fe630-fp-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fp-md/fe630-fp-jpm.ipynb
@@ -94,7 +94,7 @@
     "\n",
     "Let's make things interesting—spicy, one may say.\n",
     "\n",
-    "Consider two strats ([clipping](https://en.wikipedia.org/wiki/Clipping_(morphology)) of 'strategies,' as embodied in *Morphology*):\n",
+    "Consider two strats [([clipping](https://en.wikipedia.org/wiki/Clipping_(morphology)) of 'strategies,' as embodied in *Morphology*)]:\n",
     "\n",
     "$$\n",
     "\\text{(Strategy I)} \n",
