--- a/FE630 - Final Project/fe630-fp-md/fe630-fp-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fp-md/fe630-fp-jpm.ipynb
@@ -116,6 +116,31 @@
     "\\quad \n",
     "\n",
     "\\tag{1}\n",
+    "$$\n",
+    "\n",
+    "and\n",
+    "\n",
+    "$$\n",
+    "\\text{(Strategy II)} \n",
+    "\\quad \n",
+    "\n",
+    "\\begin{cases}\n",
+    "\n",
+    "\\underset{\\omega \\in \\mathbb{R}^n} \\max \\; \\frac{\\rho^T \\omega}{T EV(\\omega)} - \\lambda \\sqrt{\\omega^T \\Sigma \\omega} \n",
+    "\\\\\n",
+    "\n",
+    "\\\\\n",
+    "\n",
+    "-2 \\leq \\sum_{i=1}^n \\beta_i^m \\omega_i \\leq 2 \n",
+    "\n",
+    "\\\\\n",
+    "\\\\\n",
+    "\\sum_{i=1}^n \\omega_i = 1, \\quad -2 \\leq \\omega_i \\leq 2,\n",
+    "\n",
+    "\\end{cases} \n",
+    "\\quad \n",
+    "\n",
+    "\\tag{2}\n",
     "$$"
    ]
   }
