--- a/FE630 - Final Project/fe630-fp-md/fe630-fp-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fp-md/fe630-fp-jpm.ipynb
@@ -126,7 +126,7 @@
     "\n",
     "\\begin{cases}\n",
     "\n",
-    "\\underset{\\omega \\in \\mathbb{R}^n} \\max \\; \\frac{\\rho^T \\omega}{T EV(\\omega)} - \\lambda \\sqrt{\\omega^T \\Sigma \\omega} \n",
+    "\\underset{\\omega \\in \\mathbb{R}^n} \\max \\; \\frac{\\rho^T \\omega}{\\text{TEV}(\\omega)} - \\lambda \\sqrt{\\omega^T \\Sigma \\omega} \n",
     "\\\\\n",
     "\n",
     "\\\\\n",
@@ -141,6 +141,17 @@
     "\\quad \n",
     "\n",
     "\\tag{2}\n",
+    "$$\n",
+    "\n",
+    "where we define the [hieroglyphics](https://en.wikipedia.org/wiki/Egyptian_hieroglyphs) used above:\n",
+    "- $\\sigma$ is the [covariance matrix](https://en.wikipedia.org/wiki/Covariance_matrix) between the securities returns (as computed from the **FF3FM**);\n",
+    "\n",
+    "- $\\beta_i^m = \\frac{\\text{Cov}(r_i, r_M)}{\\sigma^2(r_M)}$ is the [Beta](https://en.wikipedia.org/wiki/Beta_(finance)) (not to be confused with the [colloquial slang](https://en.wikipedia.org/wiki/Alpha_and_beta_male) usage) of some [security](https://en.wikipedia.org/wiki/Security_(finance)) $S_i$ as defined by the [CAPM Model](https://en.wikipedia.org/wiki/Capital_asset_pricing_model) such that $\\beta_P^m = \\sum_{i = 1}^n \\beta_i^m \\omega_i$ is the **Portfolio Beta**;\n",
+    "\n",
+    "- $\\text{TEV}(\\omega) = \\sigma(r_P(\\omega) - r_{\\text{SPY}})$ is the '**Tracking Error Volatility**', which (if you're *really nerdy*) you can derive it as such:\n",
+    "\n",
+    "$$\n",
+    "\\sigma(r_P(\\omega) - r_{\\text{SPY}}) = \\sqrt{\\omega^{\\intercal} \\Sigma \\omega - 2 \\omega^{\\intercal} \\text{Cov}(r, r_{\\text{SPY}}) + \\sigma_{\\text{SPY}}^2} \\tag{3}\n",
     "$$"
    ]
   }
