--- a/FE630 - Final Project/fe630-fp-md/fe630-fp-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fp-md/fe630-fp-jpm.ipynb
@@ -144,7 +144,7 @@
     "$$\n",
     "\n",
     "where we define the [hieroglyphics](https://en.wikipedia.org/wiki/Egyptian_hieroglyphs) used above:\n",
-    "- $\\sigma$ is the [covariance matrix](https://en.wikipedia.org/wiki/Covariance_matrix) between the securities returns (as computed from the **FF3FM**);\n",
+    "- $\\Sigma$ is the [covariance matrix](https://en.wikipedia.org/wiki/Covariance_matrix) between the securities returns (as computed from the **FF3FM**);\n",
     "\n",
     "- $\\beta_i^m = \\frac{\\text{Cov}(r_i, r_M)}{\\sigma^2(r_M)}$ is the [Beta](https://en.wikipedia.org/wiki/Beta_(finance)) (not to be confused with the [colloquial slang](https://en.wikipedia.org/wiki/Alpha_and_beta_male) usage) of some [security](https://en.wikipedia.org/wiki/Security_(finance)) $S_i$ as defined by the [CAPM Model](https://en.wikipedia.org/wiki/Capital_asset_pricing_model) such that $\\beta_P^m = \\sum_{i = 1}^n \\beta_i^m \\omega_i$ is the **Portfolio Beta**;\n",
     "\n",
@@ -152,6 +152,16 @@
     "\n",
     "$$\n",
     "\\sigma(r_P(\\omega) - r_{\\text{SPY}}) = \\sqrt{\\omega^{\\intercal} \\Sigma \\omega - 2 \\omega^{\\intercal} \\text{Cov}(r, r_{\\text{SPY}}) + \\sigma_{\\text{SPY}}^2} \\tag{3}\n",
+    "$$\n",
+    "\n",
+    "Oh yeah, I should probably define what '**FF3FM**' means; that would (probably) be helpful.\n",
+    "\n",
+    "### 2.2 Fama–French Three-Factor Model\n",
+    "\n",
+    "So, to echo the previous sentiment, we should (almost surely) explain what is this *funky* model we kept referencing:\n",
+    "\n",
+    "$$\n",
+    "r_i = r_f + \\beta_i^3(r_M - r_f) + b_i^s r_{\\text{SMB}} + b_i^v r_{\\text{HML}} + \\alpha_i + \\epsilon_i \\tag{4}\n",
     "$$"
    ]
   }
