--- a/FE630 - Final Project/fe630-fp-md/fe630-fp-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fp-md/fe630-fp-jpm.ipynb
@@ -154,7 +154,7 @@
     "\\sigma(r_P(\\omega) - r_{\\text{SPY}}) = \\sqrt{\\omega^{\\intercal} \\Sigma \\omega - 2 \\omega^{\\intercal} \\text{Cov}(r, r_{\\text{SPY}}) + \\sigma_{\\text{SPY}}^2} \\tag{3}\n",
     "$$\n",
     "\n",
-    "Oh yeah, I should probably define what '**FF3FM**' means; that would (probably) be helpful.\n",
+    "Oh yeah, I should probably define what '**[FF3FM](https://en.wikipedia.org/wiki/Fama%E2%80%93French_three-factor_model)**' means; that would (probably) be helpful.\n",
     "\n",
     "### 2.2 Fama–French Three-Factor Model\n",
     "\n",
@@ -162,6 +162,14 @@
     "\n",
     "$$\n",
     "r_i = r_f + \\beta_i^3(r_M - r_f) + b_i^s r_{\\text{SMB}} + b_i^v r_{\\text{HML}} + \\alpha_i + \\epsilon_i \\tag{4}\n",
+    "$$\n",
+    "\n",
+    "Sorry for writing (or, to be *really technical*, [typesetting](https://en.wikipedia.org/wiki/TeX)) more hieroglyphics. We gotta keep going for a bit—stay with me!\n",
+    "\n",
+    "If we assume our [white noise](https://en.wikipedia.org/wiki/White_noise)/[error terms](https://en.wikipedia.org/wiki/Errors_and_residuals), on 'average', have a (numerical) value of $0$ (i.e., $\\mathbb{E}[\\epsilon_i] = 0$), we can derive a new goofy equation:\n",
+    "\n",
+    "$$\n",
+    "\\rho_i = r_f + \\beta_i^3 (\\rho_M - r_f) + b_i^s \\rho_{\\text{SMB}} + b_i^v \\rho_{\\text{HML}} + \\alpha_i \\tag{5}\n",
     "$$"
    ]
   }
